Fixed alignment error in contact-info div

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,6 +74,7 @@ footer h2 {
 footer div {
     
     line-height: 1.5;
+    text-align: right;
     
 }
 
@@ -281,11 +282,7 @@ margin-bottom: 15px;
     margin: 15px;
 }
 .contact-info div{
-    width: 410px;
-    display: inline-block;
-    vertical-align: top;
-    text-align: left;
-    margin: 30px 0 0 60px;
+ 
     color: white;
 }
 
@@ -312,7 +309,6 @@ margin-bottom: 15px;
 
 .contact-info iframe{
     height: 400px;
-    width:400px;
 }
 
 .contact-info h3{
@@ -323,7 +319,7 @@ margin-bottom: 15px;
 .contact-info p, .contact-info address{
     margin: 20px 0;
     line-height: 1.5;
-    font-size: 20px;
+    font-size: 16px;
     font-style: normal;
 }
 
@@ -416,7 +412,7 @@ margin-bottom: 15px;
 
   /* -----Media Queries TABLET screens----- */
 
-@media screen and (max-width:768px){
+@media screen and (max-width: 768px) {
     section {
         padding: 30px 15px;
     }
@@ -426,7 +422,7 @@ margin-bottom: 15px;
         text-align: center;
     }
 
-    .step-info{
+    .step-info {
         flex: 2 100%;
         text-align: center;
         justify-content: center;
@@ -466,7 +462,7 @@ margin-bottom: 15px;
             text-align: center;
         }
 
-        .contact-info >* {
+        .contact-info > * {
             flex: 0 100%;
         }
 
